<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cbSelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/self" />
        
        <CheckBox
            android:id="@+id/cbActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:text="@string/active" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dci" />

        <EditText
            android:id="@+id/etDci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dci_num"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>