<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <EditText
        android:id="@+id/etDeckName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/deck_name"
        android:inputType="textCapWords"
        android:textIsSelectable="false"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deck_owner"
            android:textIsSelectable="false"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spDeckOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/select_an_owner"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cbActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/active" />

        <TextView
            android:id="@+id/tvCardQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textIsSelectable="false"
            android:textSize="15sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvDeckDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10sp" >
    </ListView>

</LinearLayout>