<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="3sp" >

    <Spinner
        android:id="@+id/sCurrentSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_selected"
        android:paddingBottom="8sp"
        android:paddingTop="8sp"
        android:prompt="@string/make_a_selection" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/llByDecks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_games"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/tvTotalGamesD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbTotalWonLostD"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvGamesWonD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/won"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/tvGamesLostD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/stats_breakdown"
                android:textColor="@color/white"
                android:textIsSelectable="false" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/llWonLostStatsD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNonePlayed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tvEmptyList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_games_played"
                android:textIsSelectable="false" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>