<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/thPlayers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tabPlayerDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20sp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/etPlayerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/player_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10sp"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cbSelf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:text="@string/self"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/cbActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:checked="true"
                            android:text="@string/active"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10sp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dci" />

                        <EditText
                            android:id="@+id/etDci"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/dci_num"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabPlayerDecks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/lvDeckList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>